[package]
name = "z31_hvac"
version = "0.1.0"
edition = "2024"
authors = ["Justin Copenhaver <ninjagecko5000@gmail.com>"]

[lib]
test = false
bench = false

[[bin]]
name = "z31_hvac"
path = "src/main.rs"
test = false
doctest = false
bench = false


[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = "0.4.0"

cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
libm = "0.2.11"
panic-probe = "0.3.2"
static_cell = "2.1.0"
smart-leds = "0.4.0"
embassy-embedded-hal = "0.3.0"
eei_vfd = {path = "eei_vfddriver"}
embassy-sync = "0.6.2"
embedded-graphics = "0.8.1"
embedded-graphics-transform = {path = "embedded-graphics-transform"}
tinybmp = "0.6.0"
embedded-alloc = "0.5.1"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
